# STICkit

./: .dmypy.json  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.stickit  README.md  README_stickit_bundle.md  environment.in.yml  environment.yml  pyproject.stickit.supplement.toml  pyproject.toml  requirements-dev.txt  requirements.txt  stickit.yaml
.github/workflows/: check-env-drift.yml  ci-augment.yml  ci.yml  docs.yml  release.yml
apps/streamlit/: MolstarDemo.py
configs/: settings.yaml
docs/: AI_Coding_Rules.md  Makefile  api.rst  conf.py  developer-setup.md  diagrams.rst  diagrams_stickit.md  flowchart.rst  index.rst
docs/_mermaid/: callgraph.json  callgraph.mmd  classes.mmd  classes_stickit.mmd  packages_stickit.mmd
notebooks/: NGLview_demo_snippet.py  OpenMM_conformer_testing.ipynb  STICgen_test.ipynb
scripts/: dot_to_mermaid.py  generate_callgraph.py  sync_env.sh
services/api/: main.py
stickit/: __init__.py  cli.py  conformers.py  data.py  ionization.py  mopac.py  openmm_min.py  pipeline.py  stereo.py  tautomer.py  utils.py
stickit/config/: settings.py
stickit/db/: models.py  session.py
stickit/ml/: registry.py
stickit/parallel/: mp.py  spark.py
stickit/utils/: gpu.py
stickit/viz/: style.py
tests/: conftest.py  conftest_stickit.py  helpers.py  test_smoke.py
tests/data/: README.md  edge.smi  large.smi  medium.smi  small.smi  tautomer.smi
tests/integration/: test_benchmark_optin.py  test_pipeline_edgecases.py  test_pipeline_medium.py  test_pipeline_small.py
tests/unit/: test_conformers.py  test_ionization.py  test_keys.py  test_mopac_opt.py  test_openmm_min.py  test_stereo.py  test_tautomer.py
ui/react/: package.json
