[tool.poetry]
name = "stickit"
version = "0.1.0"
description = "STIC generation pipeline: Stereoisomer, Tautomer, Ionization state, Conformer"
authors = ["Antonio M. Ferreira, Ph.D. <amferreira68@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "stickit" }]

[tool.poetry.dependencies]
python = "^3.10"
gypsum-dl = "^1.2.3"
openmm = "^8.1.2"
openff-toolkit = { git = "https://github.com/openforcefield/openff-toolkit.git", extras = ["all"]}
numpy = "^1.26"
pyyaml = "^6.0"
typing-extensions = "^4.12"
# Parallel backends (optional)
ray = {version = "^2.34", optional = true}
# If you prefer not to install ray: use multiprocessing backend
rdkit = "^2025.3.5"
dimorphite-dl = "^2.0.2"

[tool.poetry.extras]
ray = ["ray"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
sphinx = "^7.3"
sphinx-autodoc-typehints = "^2.2"
furo = "^2024.1.29"                 # nice Sphinx theme
myst-parser = "^2.0.0"              # if you want Markdown in docs

[tool.poetry.scripts]
stickit = "stickit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

